fix: Fix select positioning on small displays

--- a/app/components/date/style.module.css
+++ b/app/components/date/style.module.css
@@ -1,5 +1,11 @@
 .rangePresets {
   grid-area: 3/1/3/4;
+
+  @container wrapper (width < 700px) {
+    & {
+      grid-area: auto;
+    }
+  }
 }
 
 .fieldset {
